--- a/random_practice.html
+++ b/random_practice.html
@@ -3,399 +3,19 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Random Practice — Exam 1 Topics (with steps)</title>
-<meta name="description" content="Generate randomized practice modeled on Practice Exam 1: equations, inequalities, slope, factoring, rational expressions, and more.">
+<title>Redirecting to Random Practice…</title>
+<meta http-equiv="refresh" content="0; url=algebra_quiz_notebook.html">
 <style>
-  :root{--bg:#0b0e11;--card:#12161c;--ink:#e9edf1;--muted:#b8c1cc;--accent:#4da3ff;--line:#1f2a36;--ok:#19c37d;--bad:#ff5c5c}
-  *{box-sizing:border-box}
-  body{margin:0;background:var(--bg);color:var(--ink);font:16px/1.5 system-ui,Segoe UI,Roboto,Helvetica,Arial}
-  header,main,footer{max-width:980px;margin:auto;padding:16px}
-  h1{font-size:1.3rem;margin:0 0 8px}
-  p{color:var(--muted);margin:8px 0}
-  .card{background:var(--card);border:1px solid var(--line);border-radius:12px;padding:16px;margin:14px 0}
-  .grid{display:grid;grid-template-columns:1fr;gap:12px}
-  @media(min-width:760px){.grid{grid-template-columns:repeat(2,1fr)}}
-  fieldset{border:1px solid var(--line);border-radius:10px;padding:10px}
-  legend{color:var(--muted)}
-  label{display:flex;gap:8px;align-items:center;margin:6px 0}
-  input[type=number]{width:100%;max-width:120px;padding:8px;border-radius:8px;border:1px solid var(--line);background:#0f141a;color:var(--ink)}
-  button{appearance:none;border:1px solid var(--line);background:#0e3a66;color:#eaf3ff;border-radius:8px;padding:10px 14px;cursor:pointer}
-  button:hover{filter:brightness(1.08)}
-  .qa{margin:10px 0;padding:12px;border:1px solid var(--line);border-radius:10px;background:#0f141a}
-  .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-  .result{font-weight:600;margin-top:8px}
-  .ok{color:var(--ok)} .bad{color:var(--bad)}
-  details{background:#0b1117;border:1px dashed var(--line);border-radius:10px;padding:10px}
-  summary{cursor:pointer;color:var(--accent)}
-  a{color:var(--accent);text-decoration:none}
+  body{margin:0;height:100vh;display:grid;place-items:center;font:16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+  a{color:#0366d6}
 </style>
 </head>
 <body>
-<header>
-  <h1>Random Practice — Exam 1 Topics</h1>
-  <p>Select topics, generate a custom quiz, and reveal detailed notebook‑style steps on each problem.</p>
-  <div class="row">
-    <a href="index.html">Home</a> •
-    <a href="practice_exam1.html">Practice Exam 1</a> •
-    <a href="references.html">References / Videos</a>
+  <div>
+    <p>Opening <strong>Random Practice (with steps)</strong>… If you are not redirected, <a href="algebra_quiz_notebook.html">click here</a>.</p>
   </div>
-</header>
-
-<main>
-  <section class="card">
-    <div class="grid">
-      <fieldset>
-        <legend>Topics (modeled on Exam 1)</legend>
-        <label><input type="checkbox" class="topic" value="prop" checked> Properties (commutative/associative)</label>
-        <label><input type="checkbox" class="topic" value="solveL" checked> Solve formula (e.g., P=2L+2W)</label>
-        <label><input type="checkbox" class="topic" value="percent" checked> Percent / cash discount</label>
-        <label><input type="checkbox" class="topic" value="netruns" checked> Integer word problems (net change)</label>
-        <label><input type="checkbox" class="topic" value="slope" checked> Slope from two points</label>
-        <label><input type="checkbox" class="topic" value="ineq" checked> Inequalities (flip when ÷ by −)</label>
-        <label><input type="checkbox" class="topic" value="elim" checked> Systems (elimination)</label>
-        <label><input type="checkbox" class="topic" value="fracEq" checked> Equations with fractions</label>
-        <label><input type="checkbox" class="topic" value="linBoth" checked> Linear eq (variables both sides)</label>
-        <label><input type="checkbox" class="topic" value="quad" checked> Quadratics (factor & solve)</label>
-        <label><input type="checkbox" class="topic" value="lineEq" checked> Equation of a line</label>
-        <label><input type="checkbox" class="topic" value="factor" checked> Factor trinomials / prime check</label>
-        <label><input type="checkbox" class="topic" value="eval" checked> Evaluate expressions</label>
-        <label><input type="checkbox" class="topic" value="divPoly" checked> Polynomial division</label>
-        <label><input type="checkbox" class="topic" value="ratSimp" checked> Rational simplify</label>
-        <label><input type="checkbox" class="topic" value="binSq" checked> Square a binomial</label>
-        <label><input type="checkbox" class="topic" value="addPoly" checked> Add/Subtract polynomials</label>
-      </fieldset>
-      <fieldset>
-        <legend>Options</legend>
-        <label>Number of Questions
-          <input type="number" id="count" min="3" max="25" value="10">
-        </label>
-        <div class="row">
-          <button id="gen">Generate Quiz</button>
-          <button id="clear">Reset</button>
-        </div>
-      </fieldset>
-    </div>
-  </section>
-
-  <section id="quiz"></section>
-</main>
-
-<footer class="card">
-  <p>Based on MA025B Exam 1 skill areas (OER Units 0–9). See <a href="references.html">References</a> for review videos and notes.</p>
-</footer>
-
-<script>
-function randInt(lo, hi){ return Math.floor(Math.random()*(hi-lo+1))+lo; }
-function coin(){ return Math.random()<0.5? -1 : 1; }
-function gcd(a,b){ a=Math.abs(a); b=Math.abs(b); while(b){ const t=b; b=a%b; a=t; } return a||1; }
-function simplifyFrac(n,d){ const g=gcd(n,d); n/=g; d/=g; const s=(n<0)^(d<0)?'-':''; n=Math.abs(n); d=Math.abs(d); return d===1? s+n : s+n+'/'+d; }
-
-function genProp(){
-  const a = coin()*randInt(2,9), b=coin()*randInt(2,9);
-  const kind = Math.random()<0.5? 'comm' : 'assoc';
-  if(kind==='comm'){
-    return {
-      prompt:`Complete and name the property: (${a})·(${b}) = (${b})·(  )`,
-      answerText:String(a),
-      steps:[
-        "Reversing the order of the factors leaves the product unchanged.",
-        "This is the <b>commutative property of multiplication</b>.",
-        `(${a})·(${b}) = (${b})·(${a}).`
-      ]
-    };
-  }else{
-    const c=coin()*randInt(1,9);
-    return {
-      prompt:`Complete and name the property: [${a} + (${b} + ${c})] = [(  ) + ${c}]`,
-      answerText:String(a+' + '+b),
-      steps:[
-        "Regrouping terms leaves the sum unchanged.",
-        "This is the <b>associative property of addition</b>.",
-        `[${a} + (${b} + ${c})] = [(${a} + ${b}) + ${c}].`
-      ]
-    };
-  }
-}
-
-function genSolveL(){
-  const W=randInt(1,20), P=2*randInt(10,40);
-  return {
-    prompt:`Solve P = 2L + 2W for L. Then plug W=${W}, P=${P} to compute L.`,
-    answerText:`L = ${(P-2*W)/2}`,
-    steps:[
-      "P = 2L + 2W ⇒ P − 2W = 2L ⇒ L = (P − 2W)/2.",
-      `Substitute W=${W}, P=${P}: L = (${P} − 2·${W})/2 = ${(P-2*W)}/2 = ${(P-2*W)/2}.`
-    ]
-  };
-}
-
-function genPercent(){
-  const rate = [5,8,9,10,12,15][randInt(0,5)];
-  const price = randInt(200,1200);
-  const disc = Math.round(price*rate/100);
-  return {
-    prompt:`A store offers ${rate}% off for cash. If the discount is $${disc}, what was the original price?`,
-    answerText:String(Math.round(disc/(rate/100))),
-    steps:[
-      `discount = rate × original ⇒ ${disc} = ${rate}% × original.`,
-      `original = ${disc} / (${rate}/100) = ${disc} ÷ ${rate/100} = ${disc/(rate/100)}.`,
-      "Round to the nearest dollar if needed."
-    ]
-  };
-}
-
-function genNetRuns(){
-  const w1 = randInt(1,3), m1 = randInt(2,6);
-  const l1 = randInt(1,4), n1 = randInt(2,6);
-  const w2 = randInt(1,5), m2 = randInt(1,4);
-  const total = w1*m1 - l1*n1 + w2*m2;
-  return {
-    prompt:`Team won ${w1} games by ${m1} runs, lost ${l1} by ${n1} runs, then won ${w2} by ${m2} runs. Net runs?`,
-    answerText:String(total),
-    steps:[
-      `Wins: +${w1}·${m1} = +${w1*m1}. Losses: −${l1}·${n1} = −${l1*n1}.`,
-      `Final wins: +${w2}·${m2} = +${w2*m2}. Total = ${total}.`
-    ]
-  };
-}
-
-function genSlope(){
-  const x1=randInt(-10,10), y1=randInt(-10,10);
-  let x2=randInt(-10,10); while(x2===x1) x2=randInt(-10,10);
-  const y2=randInt(-10,10);
-  let num = y2 - y1, den = x2 - x1;
-  const sign = (num<0)^(den<0)? '-' : '';
-  num = Math.abs(num); den = Math.abs(den);
-  const g=gcd(num,den); num/=g; den/=g;
-  const m = den===1? `${sign}${num}` : `${sign}${num}/${den}`;
-  return {
-    prompt:`Find slope through (${x1}, ${y1}) and (${x2}, ${y2}).`,
-    answerText:`m = ${m}`,
-    steps:[
-      `m = (y₂ − y₁)/(x₂ − x₁) = (${y2} − ${y1})/(${x2} − ${x1}).`,
-      `Simplify to ${m}.`
-    ]
-  };
-}
-
-function genIneq(){
-  const k = -1*randInt(2,9);
-  const x = coin()*randInt(0,6);
-  const c = k*x;
-  return {
-    prompt:`Solve and give interval: ${k}x ≤ ${c}.`,
-    answerText:`x ≥ ${c}/${k} = ${x}`,
-    steps:[
-      `Divide by ${k} (negative) ⇒ flip ≤ to ≥.`,
-      `x ≥ ${c}/${k} = ${x}. Interval [${x}, ∞).`
-    ]
-  };
-}
-
-function genElim(){
-  const a=randInt(1,9), b=randInt(1,9), d=randInt(1,9), e=randInt(1,9);
-  const x0=randInt(-5,5), y0=randInt(-5,5);
-  const c1 = a*x0 + b*y0;
-  const f1 = d*x0 + e*y0;
-  return {
-    prompt:`Solve by elimination: ${a}x + ${b}y = ${c1} and ${d}x + ${e}y = ${f1}.`,
-    answerText:`(${x0}, ${y0})`,
-    steps:[
-      `Multiply equations to eliminate one variable, add/subtract, solve for the other.`,
-      `Back‑substitute to find the remaining variable. Here the solution is (${x0}, ${y0}).`
-    ]
-  };
-}
-
-function genFracEq(){
-  const p = coin()*randInt(0,10);
-  const sol = coin()*randInt(1,12);
-  const m2 = randInt(2,9), n2 = randInt(2,9);
-  const q2 = Math.round((n2/m2)*(sol - p) - sol);
-  return {
-    prompt:`Solve: (x − ${p})/${m2} = (x + ${q2})/${n2}.`,
-    answerText:`x = ${sol}`,
-    steps:[
-      `Cross‑multiply: ${n2}(x − ${p}) = ${m2}(x + ${q2}).`,
-      `Expand and collect: (${n2}−${m2})x = ${n2*p} + ${m2*q2}.`,
-      `Solve for x to obtain ${sol}.`
-    ]
-  };
-}
-
-function genLinBoth(){
-  const x = coin()*randInt(1,12);
-  const a=randInt(2,9), b=randInt(2,9), c=randInt(2,9), d=randInt(2,9);
-  const k = randInt(-10,10);
-  return {
-    prompt:`Solve: ${a}x + ${b} + ${k} = ${c}x + ${d} + ${k}.`,
-    answerText:`x = ${x}`,
-    steps:[
-      `Cancel ${k} on both sides ⇒ ${a}x + ${b} = ${c}x + ${d}.`,
-      `Move x‑terms and constants: (${a}−${c})x = ${d}−${b}.`,
-      `Solve to get x = ${x}.`
-    ]
-  };
-}
-
-function genQuad(){
-  const p = randInt(1,10), q=randInt(1,10);
-  const b = q - p, c = -p*q;
-  return {
-    prompt:`Solve: x² + ${b}x ${c<0?'-':'+'} ${Math.abs(c)} = 0 by factoring.`,
-    answerText:`x = ${p} or x = −${q}`,
-    steps:[
-      `Factor: (x − ${p})(x + ${q}) = 0.`,
-      `Set each factor = 0 ⇒ x = ${p} or x = −${q}.`
-    ]
-  };
-}
-
-function genLineEq(){
-  const x1=randInt(-10,10), y1=randInt(-10,10);
-  let x2=randInt(-10,10); while(x2===x1) x2=randInt(-10,10);
-  const y2=randInt(-10,10);
-  const mNum = y2-y1, mDen = x2-x1;
-  const m = simplifyFrac(mNum, mDen);
-  return {
-    prompt:`Find the slope‑intercept form of the line through (${x1}, ${y1}) and (${x2}, ${y2}).`,
-    answerText:`y = ${m.includes('/')? '('+m+')':' '+m}x + ${simplifyFrac(y1* mDen - mNum*x1, mDen)}`,
-    steps:[
-      `m = (y₂ − y₁)/(x₂ − x₁) = ${m}.`,
-      `Use point‑slope: y − ${y1} = ${m}(x − ${x1}), then rearrange to y = mx + b.`
-    ]
-  };
-}
-
-function genFactor(){
-  const p = coin()*randInt(1,12), q = coin()*randInt(1,12);
-  const b = p+q, c = p*q;
-  return {
-    prompt:`Factor: x² + ${b}x + ${c}. If not factorable over integers, say prime.`,
-    answerText:`(x + ${p})(x + ${q})`,
-    steps:[
-      `Find integers p,q with p+q=${b} and pq=${c}.`,
-      `Here p=${p}, q=${q}. So (x + ${p})(x + ${q}).`
-    ]
-  };
-}
-
-function genEval(){
-  const x=coin()*randInt(1,8), y=coin()*randInt(1,8);
-  const A = 3*x+7, B = 14-2*y;
-  return {
-    prompt:`Evaluate (3x + 7)/(14 − 2y) at x=${x}, y=${y}.`,
-    answerText:String(A/B),
-    steps:[
-      `Numerator: 3·${x} + 7 = ${A}. Denominator: 14 − 2·${y} = ${B}.`,
-      `Value: ${A}/${B}.`
-    ]
-  };
-}
-
-function genDivPoly(){
-  return {
-    prompt:`Divide: (y² + 18y + 81) ÷ (y + 9).`,
-    answerText:`y + 9`,
-    steps:[
-      "Recognize a perfect square: y² + 18y + 81 = (y + 9)².",
-      "Divide to get y + 9."
-    ]
-  };
-}
-
-function genRatSimp(){
-  return {
-    prompt:`Reduce: (16x + 20)/(20x + 25).`,
-    answerText:`4/5`,
-    steps:[
-      "Factor: 4(4x+5) over 5(4x+5).",
-      "Cancel common binomial, result 4/5."
-    ]
-  };
-}
-
-function genBinSq(){
-  const a=randInt(2,9), b=randInt(1,9);
-  return {
-    prompt:`Expand: (${a}t + ${b})².`,
-    answerText:`${a*a}t^2 + ${2*a*b}t + ${b*b}`,
-    steps:[
-      "(u+v)² = u² + 2uv + v².",
-      `Here u=${a}t, v=${b} ⇒ ${a*a}t² + ${2*a*b}t + ${b*b}.`
-    ]
-  };
-}
-
-function genAddPoly(){
-  const A=randInt(1,12), B=randInt(1,12), C=randInt(1,12);
-  const D=randInt(1,12), E=randInt(1,12), F=randInt(1,12);
-  return {
-    prompt:`Simplify: (${A}x + ${B}xy − ${C}y) − (${D}x − ${E}xy − ${F}y).`,
-    answerText:`${A-D}x + ${B+E}xy + ${-C+F}y`,
-    steps:[
-      "Distribute the minus into the second parentheses.",
-      "Combine like terms in x, xy, and y."
-    ]
-  };
-}
-
-const genByKey = {
-  prop: genProp, solveL: genSolveL, percent: genPercent, netruns: genNetRuns,
-  slope: genSlope, ineq: genIneq, elim: genElim, fracEq: genFracEq, linBoth: genLinBoth,
-  quad: genQuad, lineEq: genLineEq, factor: genFactor, eval: genEval,
-  divPoly: genDivPoly, ratSimp: genRatSimp, binSq: genBinSq, addPoly: genAddPoly
-};
-
-const quiz = document.getElementById('quiz');
-document.getElementById('gen').addEventListener('click', ()=>{
-  const wanted = [...document.querySelectorAll('.topic:checked')].map(el=>el.value);
-  const n = Math.max(3, Math.min(25, +document.getElementById('count').value||10));
-  if(!wanted.length){ alert('Pick at least one topic.'); return; }
-  const items=[];
-  for(let i=0;i<n;i++){
-    const key = wanted[i % wanted.length];
-    items.push(genByKey[key]());
-  }
-  render(items);
-});
-document.getElementById('clear').addEventListener('click', ()=> quiz.innerHTML='');
-
-function render(items){
-  quiz.innerHTML = items.map((it,idx)=>`
-    <article class="qa">
-      <h3>Q${idx+1}</h3>
-      <p>${it.prompt}</p>
-      <div class="row">
-        <label>Answer:
-          <input type="text" id="ans${idx}" placeholder="type your answer">
-        </label>
-        <button data-i="${idx}" class="chk">Check</button>
-      </div>
-      <div id="res${idx}" class="result" aria-live="polite"></div>
-      <details><summary>Show steps</summary><ol>${it.steps.map(s=>`<li>${s}</li>`).join('')}</ol></details>
-      <details><summary>Reveal exact answer</summary><p>${it.answerText}</p></details>
-    </article>
-  `).join('');
-
-  quiz.querySelectorAll('.chk').forEach(btn=>{
-    btn.addEventListener('click', ()=>{
-      const i = +btn.dataset.i;
-      const val = (document.getElementById('ans'+i).value||'').trim();
-      const correct = items[i].answerText.replace(/\s+/g,'').toLowerCase();
-      const user = val.replace(/\s+/g,'').toLowerCase();
-      const res = document.getElementById('res'+i);
-      if(!val){ res.innerHTML = '<span class="bad">Enter an answer first.</span>'; return; }
-      if(correct===user){ res.innerHTML = '<span class="ok">Correct ✔</span>'; }
-      else{ res.innerHTML = `<span class="bad">Not quite. Expected something equivalent to: <code>${items[i].answerText}</code></span>`; }
-    });
-  });
-}
-
-/* PWA */
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('./sw.js').catch(()=>{});
-}
-</script>
+  <script>
+    if('serviceWorker' in navigator){navigator.serviceWorker.register('./sw.js').catch(()=>{});}
+  </script>
 </body>
 </html>
