--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link rel="manifest" href="manifest.webmanifest">
 <title>MA025B — Algebra Study Hub</title>
 <style>
-/* --- shared styles (mobile-first, high-contrast) --- */
 :root{--bg:#0b132b;--panel:#1c2541;--accent:#5bc0be;--accent-2:#98c1d9;--ink:#edf2f4;--muted:#a8b2c1;--danger:#ff6b6b;--ok:#2ecc71;--warn:#ffd166;--shadow:0 6px 20px rgba(0,0,0,.25)}
 @media (prefers-color-scheme: light){
   :root{--bg:#f6f7fb;--panel:#fff;--accent:#005f73;--accent-2:#0a9396;--ink:#102a43;--muted:#697386;--danger:#b00020;--ok:#1b8a5a;--warn:#a97300;--shadow:0 10px 25px rgba(0,0,0,.08)}
@@ -35,10 +34,10 @@ nav a:hover,.btn:hover,button:hover{transform:translateY(-1px)}nav a:active,.btn
       <h1>MA025B — Algebra Study Hub</h1>
     </div>
     <nav aria-label="Primary">
-  <a href="references.html">🎥 References</a>
-  <a href="practice_exam1.html">Practice Exam 1</a>
-  <a href="random_practice.html">Random Practice</a>
-</nav>
+      <a href="references.html">🎥 References</a>
+      <a href="practice_exam1.html">Practice Exam 1</a>
+      <a href="random_practice.html">Random Practice</a>
+    </nav>
   </header>
 
   <section class="card">
@@ -59,6 +58,15 @@ nav a:hover,.btn:hover,button:hover{transform:translateY(-1px)}nav a:active,.btn
       <a class="card" href="algebra_units6_9_quiz.html">
         <h3>Units 6–9 Practice</h3>
         <p>Factoring, rationals, radicals, quadratics</p>
+      </a>
+      <!-- New cards -->
+      <a class="card" href="practice_exam1.html">
+        <h3>Practice Exam 1</h3>
+        <p>Multiple choice + step‑by‑step explanations</p>
+      </a>
+      <a class="card" href="random_practice.html">
+        <h3>Random Practice</h3>
+        <p>Create custom drills with notebook‑style steps</p>
       </a>
     </div>
   </section>
