--- a/random_practice.html
+++ b/random_practice.html
@@ -3,302 +3,16 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Random Practice — Exam Style (with steps)</title>
-<meta name="description" content="Generate randomized MA025B practice similar to Practice Exam 1, with notebook-style steps.">
+<title>Redirecting to Random Practice…</title>
+<meta http-equiv="refresh" content="0; url=algebra_quiz_notebook.html">
 <style>
-  :root{--bg:#0b0e11;--card:#12161c;--ink:#e9edf1;--muted:#b8c1cc;--accent:#4da3ff;--line:#1f2a36;--ok:#19c37d;--bad:#ff5c5c}
-  *{box-sizing:border-box}
-  body{margin:0;background:var(--bg);color:var(--ink);font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-  header,main,footer{max-width:1000px;margin:auto;padding:16px}
-  h1{font-size:1.2rem;margin:0 0 8px}
-  p{color:var(--muted);margin:8px 0}
-  .card{background:var(--card);border:1px solid var(--line);border-radius:12px;padding:16px;margin:14px 0}
-  fieldset{border:1px solid var(--line);border-radius:10px;padding:10px}
-  legend{color:var(--muted)}
-  label{display:flex;gap:8px;align-items:center;margin:6px 0}
-  input[type=number]{width:120px;padding:8px;border-radius:8px;border:1px solid var(--line);background:#0f141a;color:var(--ink)}
-  button{appearance:none;border:1px solid var(--line);background:#0e3a66;color:#eaf3ff;border-radius:8px;padding:10px 14px;cursor:pointer}
-  button:hover{filter:brightness(1.08)}
-  .qa{margin:10px 0;padding:12px;border:1px solid var(--line);border-radius:10px;background:#0f141a}
-  .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-  .result{font-weight:600;margin-top:8px}
-  .ok{color:var(--ok)} .bad{color:var(--bad)}
-  details{background:#0b1117;border:1px dashed var(--line);border-radius:10px;padding:10px}
-  summary{cursor:pointer;color:var(--accent)}
-  a{color:var(--accent);text-decoration:none}
+  body{margin:0;height:100vh;display:grid;place-items:center;font:16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+  a{color:#0366d6}
 </style>
 </head>
 <body>
-<header>
-  <h1>Random Practice — Exam Style (with steps)</h1>
-  <p>Select topics and a question count. Reveal steps to study like a paper notebook.</p>
-  <div class="row">
-    <a href="index.html">← Home</a> •
-    <a href="practice_exam1.html">Practice Exam 1</a> •
-    <a href="references.html">References / Videos</a>
+  <div>
+    <p>Opening <strong>Random Practice (with steps)</strong>… If you are not redirected, <a href="algebra_quiz_notebook.html">click here</a>.</p>
   </div>
-</header>
-
-<main>
-  <section class="card">
-    <div class="row" style="gap:16px;align-items:flex-start;flex-wrap:wrap">
-      <fieldset>
-        <legend>Topics</legend>
-        <label><input type="checkbox" class="topic" value="lin" checked> Linear equations</label>
-        <label><input type="checkbox" class="topic" value="ineq" checked> Inequalities</label>
-        <label><input type="checkbox" class="topic" value="slope" checked> Slope from two points</label>
-        <label><input type="checkbox" class="topic" value="sys" checked> Systems (elimination/substitution)</label>
-        <label><input type="checkbox" class="topic" value="fac1" checked> Factor (a=1)</label>
-        <label><input type="checkbox" class="topic" value="facA" checked> Factor (a≠1)</label>
-        <label><input type="checkbox" class="topic" value="quad" checked> Solve quadratic by factoring</label>
-        <label><input type="checkbox" class="topic" value="rat" checked> Rational simplify</label>
-        <label><input type="checkbox" class="topic" value="rad" checked> Radicals (binomial square)</label>
-        <label><input type="checkbox" class="topic" value="form" checked> Solve a formula (e.g., P=2L+2W)</label>
-        <label><input type="checkbox" class="topic" value="disc" checked> Percent discount</label>
-        <label><input type="checkbox" class="topic" value="polydiv" checked> Poly division (perfect square)</label>
-      </fieldset>
-      <fieldset>
-        <legend>Options</legend>
-        <label>Number of Questions
-          <input type="number" id="count" min="3" max="25" value="10">
-        </label>
-        <div class="row">
-          <button id="gen">Generate</button>
-          <button id="clear">Reset</button>
-        </div>
-      </fieldset>
-    </div>
-  </section>
-  <section id="quiz"></section>
-</main>
-
-<footer class="card">
-  <p>Problems mirror the structure of your Practice Exam 1 & OER chapters (0–9). Use on phone, tablet, desktop, or Steam Deck.</p>
-</footer>
-
-<script>
-function rInt(a,b){ return Math.floor(Math.random()*(b-a+1))+a; }
-function coin(){ return Math.random()<0.5?-1:1; }
-function gcd(a,b){ a=Math.abs(a); b=Math.abs(b); while(b){[a,b]=[b,a%b]} return a||1; }
-function simpFrac(n,d){ const g=gcd(n,d); return [n/g,d/g]; }
-
-/* Generators -> {prompt, answerText, steps} */
-function genLinear(){
-  const a = coin()*rInt(2,9), x = coin()*rInt(1,12), b = coin()*rInt(0,12);
-  const c = a*x + b;
-  return {
-    prompt:`Solve: ${a}x + ${b} = ${c}`,
-    answerText:`x = ${x}`,
-    steps:[
-      `Start: ${a}x + ${b} = ${c}`,
-      `Subtract ${b} from both sides → ${a}x = ${c-b}`,
-      `Divide by ${a} → x = ${(c-b)}/${a} = ${x}`
-    ]
-  };
-}
-
-function genIneq(){
-  const k = -rInt(2,9), x = rInt(-6,6), c = k*x;
-  return {
-    prompt:`Solve and give interval: ${k}x ≤ ${c}`,
-    answerText:`x ≥ ${x}  (interval [${x}, ∞))`,
-    steps:[
-      `Divide both sides by ${k} (negative) → flip ≤ to ≥`,
-      `x ≥ ${c}/${k} = ${x}`
-    ]
-  };
-}
-
-function genSlope(){
-  const x1=rInt(-10,10), y1=rInt(-10,10); let x2=rInt(-10,10); while(x2===x1) x2=rInt(-10,10);
-  const y2=rInt(-10,10);
-  let num=y2-y1, den=x2-x1, sign=(num<0)^(den<0)?'-':'';
-  [num,den]=simpFrac(Math.abs(num),Math.abs(den));
-  const m = den===1? `${sign}${num}` : `${sign}${num}/${den}`;
-  return {
-    prompt:`Find the slope through (${x1}, ${y1}) and (${x2}, ${y2}).`,
-    answerText:`m = ${m}`,
-    steps:[
-      `m = (y₂−y₁)/(x₂−x₁) = (${y2}−${y1})/(${x2}−${x1})`,
-      `m = ${(y2-y1)} / ${(x2-x1)} = ${m}`
-    ]
-  };
-}
-
-function genSys(){
-  // Make integer solution
-  const x=rInt(-4,4), y=rInt(-4,4);
-  const a=rInt(1,9)*coin(), b=rInt(1,9)*coin();
-  const c=rInt(1,9)*coin(), d=rInt(1,9)*coin();
-  const m=a*x+b*y, n=c*x+d*y;
-  return {
-    prompt:`Solve the system: { ${a}x + ${b}y = ${m} ; ${c}x + ${d}y = ${n} }`,
-    answerText:`(x, y) = (${x}, ${y})`,
-    steps:[
-      `Multiply/Eliminate. For example, eliminate x: multiply first eq by ${c}, second by ${a}, then subtract.`,
-      `After elimination you get a 1‑variable equation for y; solve to get y = ${y}.`,
-      `Back‑substitute to find x = ${x}.`
-    ]
-  };
-}
-
-function genFacAeq1(){
-  const p=coin()*rInt(1,10), q=coin()*rInt(1,10);
-  const b=p+q, c=p*q;
-  return {
-    prompt:`Factor: x² + ${b}x + ${c}`,
-    answerText:`(x + ${p})(x + ${q})`,
-    steps:[
-      `Find numbers that multiply to ${c} and add to ${b}.`,
-      `They are ${p} and ${q}.`,
-      `Factor: (x + ${p})(x + ${q}).`
-    ]
-  };
-}
-
-function genFacAneq1(){
-  const a=rInt(2,5), r=coin()*rInt(1,9), s=coin()*rInt(1,9);
-  const b=a*r+s, c=s*r;
-  return {
-    prompt:`Factor: ${a}x² + ${b}x + ${c}`,
-    answerText:`(x + ${r})(${a}x + ${s})`,
-    steps:[
-      `${a}x² + ${b}x + ${c}. ac = ${a*c}.`,
-      `Find two integers with product ${a*c} and sum ${b}: ${a*r} and ${s}.`,
-      `Split and group: ${a}x² + ${a*r}x + ${s}x + ${c} = (x + ${r})(${a}x + ${s}).`
-    ]
-  };
-}
-
-function genQuad(){
-  const p=rInt(1,10), q=rInt(1,10);
-  const b=q-p, c= -p*q;
-  return {
-    prompt:`Solve by factoring: x² + ${b}x ${c<0?'-':'+'} ${Math.abs(c)} = 0`,
-    answerText:`x = ${p} or x = −${q}`,
-    steps:[
-      `Factor: (x − ${p})(x + ${q}) = 0`,
-      `So x = ${p} or x = −${q}.`
-    ]
-  };
-}
-
-function genRat(){
-  const k=rInt(2,9), u=rInt(1,9), v=rInt(1,9);
-  return {
-    prompt:`Simplify: ${k*(u)}x + ${k*v}  over  ${u*5}x + ${v*5}`,
-    answerText:`${k}/5`,
-    steps:[
-      `Factor numerator/denominator: ${k}(${u}x+${v}) / 5(${u}x+${v})`,
-      `Cancel common factor → ${k}/5.`
-    ]
-  };
-}
-
-function genRad(){
-  const A=rInt(2,9), B=rInt(2,9);
-  return {
-    prompt:`Simplify: (√(${A}t) + √(${B}r))²`,
-    answerText:`${A}t + 2√(${A*B}tr) + ${B}r`,
-    steps:[
-      `(A+B)² = A² + 2AB + B² with A=√(${A}t), B=√(${B}r).`,
-      `A²=${A}t, B²=${B}r, 2AB = 2√(${A}t·${B}r) = 2√(${A*B}tr).`
-    ]
-  };
-}
-
-function genFormula(){
-  const L=rInt(2,20), W=rInt(1,10);
-  const P=2*L+2*W;
-  return {
-    prompt:`Given P = 2L + 2W with P=${P} and W=${W}, solve for L.`,
-    answerText:`L = ${L}`,
-    steps:[
-      `P − 2W = 2L ⇒ ${P} − 2(${W}) = 2L ⇒ ${P-2*W} = 2L.`,
-      `Divide by 2 ⇒ L = ${(P-2*W)/2} = ${L}.`
-    ]
-  };
-}
-
-function genDiscount(){
-  const rate=rInt(5,25); // %
-  const before=rInt(100,900);
-  const disc=Math.round(before*rate/100);
-  return {
-    prompt:`A store gives ${rate}% cash discount of $${disc}. What was the bill before discount?`,
-    answerText:`$${Math.round(disc*100/rate)}`,
-    steps:[
-      `Let B be the bill. ${rate}% of B = ${disc} ⇒ 0.${rate.toString().padStart(2,'0')}B = ${disc}.`,
-      `B = ${disc}/( ${rate}/100 ) = ${Math.round(disc*100/rate)} (nearest dollar).`
-    ]
-  };
-}
-
-function genPolyDiv(){
-  const a=rInt(2,12);
-  return {
-    prompt:`Divide: (y² + ${2*a}y + ${a*a}) ÷ (y + ${a})`,
-    answerText:`y + ${a}`,
-    steps:[
-      `Numerator is (y + ${a})².`,
-      `(y + ${a})²/(y + ${a}) = y + ${a} (y ≠ −${a}).`
-    ]
-  };
-}
-
-const bank = {
-  lin:genLinear, ineq:genIneq, slope:genSlope, sys:genSys,
-  fac1:genFacAeq1, facA:genFacAneq1, quad:genQuad, rat:genRat,
-  rad:genRad, form:genFormula, disc:genDiscount, polydiv:genPolyDiv
-};
-
-const quiz = document.getElementById('quiz');
-document.getElementById('gen').addEventListener('click', ()=>{
-  const topics=[...document.querySelectorAll('.topic:checked')].map(el=>el.value);
-  const n=Math.max(3, Math.min(25, +document.getElementById('count').value||10));
-  if(!topics.length){ alert('Pick at least one topic.'); return; }
-  const items=[];
-  for(let i=0;i<n;i++){
-    const key=topics[i % topics.length]; // rotate for variety
-    items.push(bank[key]());
-  }
-  render(items);
-});
-document.getElementById('clear').addEventListener('click', ()=> quiz.innerHTML='');
-
-function render(items){
-  quiz.innerHTML = items.map((it,idx)=>`
-    <article class="qa">
-      <h3>Q${idx+1}</h3>
-      <p>${it.prompt}</p>
-      <div class="row">
-        <label>Answer:
-          <input type="text" id="ans${idx}" placeholder="type your answer"/>
-        </label>
-        <button data-i="${idx}" class="chk">Check</button>
-      </div>
-      <div id="res${idx}" class="result" aria-live="polite"></div>
-      <details><summary>Show steps</summary><ol>${it.steps.map(s=>`<li>${s}</li>`).join('')}</ol></details>
-      <details><summary>Reveal exact answer</summary><p>${it.answerText}</p></details>
-    </article>
-  `).join('');
-  quiz.querySelectorAll('.chk').forEach(btn=>{
-    btn.addEventListener('click', ()=>{
-      const i=+btn.dataset.i;
-      const user = (document.getElementById('ans'+i).value||'').trim().replace(/\s+/g,'').toLowerCase();
-      const corr = items[i].answerText.replace(/\s+/g,'').toLowerCase();
-      const res = document.getElementById('res'+i);
-      if(!user){ res.innerHTML='<span class="bad">Enter an answer first.</span>'; return; }
-      res.innerHTML = (user===corr) ? '<span class="ok">Correct ✔</span>' :
-        `<span class="bad">Not quite. Expect something equivalent to: <code>${items[i].answerText}</code></span>`;
-    });
-  });
-}
-
-/* PWA */
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('./sw.js').catch(()=>{});
-}
-</script>
 </body>
 </html>
