--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="manifest" href="manifest.webmanifest">
 <title>MA025B — Algebra Study Hub</title>
 <style>
+/* --- shared styles (mobile-first, high-contrast) --- */
 :root{--bg:#0b132b;--panel:#1c2541;--accent:#5bc0be;--accent-2:#98c1d9;--ink:#edf2f4;--muted:#a8b2c1;--danger:#ff6b6b;--ok:#2ecc71;--warn:#ffd166;--shadow:0 6px 20px rgba(0,0,0,.25)}
 @media (prefers-color-scheme: light){
   :root{--bg:#f6f7fb;--panel:#fff;--accent:#005f73;--accent-2:#0a9396;--ink:#102a43;--muted:#697386;--danger:#b00020;--ok:#1b8a5a;--warn:#a97300;--shadow:0 10px 25px rgba(0,0,0,.08)}
@@ -59,7 +60,12 @@ nav a:hover,.btn:hover,button:hover{transform:translateY(-1px)}nav a:active,.btn
         <h3>Units 6–9 Practice</h3>
         <p>Factoring, rationals, radicals, quadratics</p>
       </a>
-      <!-- New cards -->
+    </div>
+  </section>
+
+  <section class="card">
+    <h2>Practice Tests</h2>
+    <div class="grid">
       <a class="card" href="practice_exam1.html">
         <h3>Practice Exam 1</h3>
         <p>Multiple choice + step‑by‑step explanations</p>
@@ -74,7 +80,9 @@ nav a:hover,.btn:hover,button:hover{transform:translateY(-1px)}nav a:active,.btn
   <section class="card">
     <h2>Audio/Class Review</h2>
     <p>Put your <code>.m4a</code> files in an <code>audio/</code> folder. Open <a href="unit5_quick_review.html">Unit 5 Quick Review</a> to auto‑load players.</p>
-    <li><a href="audio.html">Audio Lectures</a></li>
+    <ul>
+      <li><a href="audio.html">Audio Lectures</a></li>
+    </ul>
   </section>
 
   <section class="card">
