--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@ nav a:active,.btn:active,button:active{transform:translateY(0)}
       <a href="references.html">🎥 References</a>
       <a href="practice_exam1.html">Practice Exam 1</a>
       <a href="practice_exam1-v2.html">Practice Exam 1 (v2)</a>
+      <a href="practice_exam2.html">Practice Exam 2</a>
       <a href="random_practice.html">Random Practice</a>
+      <a href="random_practice_hard.html">Hard Random</a>
     </nav>
   </header>
 
@@ -87,6 +89,15 @@ nav a:active,.btn:active,button:active{transform:translateY(0)}
         <h3>Practice Exam 1 (v2)</h3>
         <p>Same exam, cleaner layout, full worked steps</p>
       </a>
+      <!-- NEW cards -->
+      <a class="card" href="practice_exam2.html">
+        <h3>Practice Exam 2</h3>
+        <p>Original exam — MC + step‑by‑step grading</p>
+      </a>
+      <a class="card" href="random_practice_hard.html">
+        <h3>Hard Random Practice</h3>
+        <p>Tougher drills with full notebook‑style steps</p>
+      </a>
       <a class="card" href="random_practice.html">
         <h3>Random Practice</h3>
         <p>Create custom drills with notebook‑style steps</p>
@@ -114,7 +125,7 @@ nav a:active,.btn:active,button:active{transform:translateY(0)}
 <script>
   // Refresh the service worker (cache buster)
   if('serviceWorker' in navigator){
-    navigator.serviceWorker.register('sw.js?ver=11');
+    navigator.serviceWorker.register('sw.js?ver=12');
   }
 </script>
 </body>
